--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,3 @@
 @import url("https://api.fontshare.com/v2/css?f[]=satoshi@1&f[]=general-sans@200,201,300,301,400,401,500,501,600,601,700,701,1,2&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
